kubernetes/ingress_and_pv/app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo2
spec:
  ports: 
  - port: 80
  selector:
   app: echo2

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: echo2
spec: 
  selector:
   matchLabels:
     app: echo2
  replicas: 2
  template:
   metadata:
    labels:
     app: echo2
   spec:
     containers:
     - name: echo2
       image: nginx
       ports:
       - containerPort: 80
