kubernetes/ingress_and_pv/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
 rules:
 - host: echo1.localhost
   http:
    paths:
    - backend:
        serviceName: echo1
        servicePort: 80
 - host: echo2.localhost
   http:
    paths:
    - backend:
        serviceName: echo2
        servicePort: 80
